--- a/test.html
+++ b/test.html
@@ -163,12 +163,12 @@
             });
         }
 
-        initMap();
+        initMap(); 
     </script>
 </head>
 
 <body>
-    <gmpx-api-loader key="AIzaSyAKybL_aGnIhoToiZmM3EjiZw0LR3HEPpU" solution-channel="GMP_QB_addressselection_v3_cABC">
+    <gmpx-api-loader key="" solution-channel="GMP_QB_addressselection_v3_cABC">
     </gmpx-api-loader>
     <gmpx-split-layout row-layout-min-width="600">
         <div class="panel" slot="fixed">
